src/snapshots/cornercase__ui__tests__groups__a_collapsed_group_holding_the_active_project_marks_its_header.snap
---
source: src/ui.rs
expression: "render_sized(&grouped(1, true), W, TALL).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │  no tab open                             "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"  tmp (1)                      │  + new workspace        │                                          "
"                               │                         │                                          "
"▌ ▸ ● work (2)                 │                         │                                          "
"                               │                         │                                          "
"  ▾ ★ oss                      │                         │                                          "
"    cornercase (1)             │                         │                                          "
"                               │                         │                                          "
"  + new project                │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                         │                                          "
"  quit                         │                         │                                          "
