src/snapshots/cornercase__ui__tests__groups__a_collapsed_group_without_the_active_project_is_not_marked.snap
---
source: src/ui.rs
expression: "render_sized(&grouped(0, true), W, TALL).backend()"
---
" ▄▀▀▀ cornercase                                         │  no tab open                             "
" █                                                       │                                          "
"                                                         │                                          "
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ tmp (1)                      │  + new workspace        │                                          "
"                               │                         │                                          "
"  ▸ ● work (2)                 │                         │                                          "
"                               │                         │                                          "
"  ▾ ★ oss                      │                         │                                          "
"    cornercase (1)             │                         │                                          "
"                               │                         │                                          "
"  + new project                │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  quit                         │                         │                                          "
