src/snapshots/cornercase__ui__tests__groups__renders_expanded_groups_with_the_active_project_inside.snap
---
source: src/ui.rs
expression: "render_sized(&grouped(1, false), W, TALL).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │  no tab open                             "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"  tmp (1)                      │  + new workspace        │                                          "
"                               │                         │                                          "
"  ▾ ● work                     │                         │                                          "
"▌   api (1)                    │                         │                                          "
"    web (1)                    │                         │                                          "
"                               │                         │                                          "
"  ▾ ★ oss                      │                         │                                          "
"    cornercase (1)             │                         │                                          "
"                               │                         │                                          "
"  + new project                │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                         │                                          "
"  quit                         │                         │                                          "
