src/snapshots/cornercase__ui__tests__groups__renders_the_icon_and_colour_modal.snap
---
source: src/ui.rs
expression: "render(&styling('★', 99)).backend()"
---
" ▄▀▀▀ cornercase                                         │  no tab open                             "
" █                                                       │                                          "
"                                                         │                                          "
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                  ┌ work ────────────────────────────────────────────────────────┐                  "
" projects         │ icon                                                         │                  "
"                  │  ●  ◉  ◐  ◆  ■  ▲                                            │                  "
"  tmp (1)         │  ▼  ★  ✦  ♥  ♣  ♠                                            │                  "
"                  │ colour                                                       │                  "
"  ▾ ● work        │  ██  ██  ██  ██  ██  ██  ██  ██                              │                  "
"▌   api (1)       │  ██  ██  ██  ██ [██] ██  ██  ██                              │                  "
"    web (1)       │                                                              │                  "
"                  │ ▾ ★ work                                               done  │                  "
"  ↓ 2 more        └──────────────────────────────────────────────────────────────┘                  "
"  + new project                │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  quit                         │                         │                                          "
